2020-09-22 Alibaba Cloud.
	* version: 2.4.13
	* BUGFIX: do not filter ns=admin.$cmd so that transaction works.
	* IMPROVE: enable NoCursorTimeout in full-sync reader.

2020-09-01 Alibaba Cloud.
	* version: 2.4.12
	* IMPROVE: add sort and hint by _id in full sync stage.
	* IMPROVE: add executor namespace writing count metric.
	* IMPROVE: add WhiteListObjectIdHasher to solve the jumbo table without
	unique index.
	* BUGFIX: solve error: "db[xx] not exists on startTsMap". #434

2020-08-27 Alibaba Cloud.
	* version: 2.4.11
	* IMPROVE: add ut_test script.
	* IMPORVE: in full sync stage: replace mgo driver with mongo-go-driver in
	reading.
	* BUGFIX: if can not run incr sync directly, return error when sync_mode
	== incr.
	* IMPROVE: docSync crash directly when meest error in full sync.
	* BUGFIX: do not change sync_mode whn tunnel != direct. #424
	* IMPROVE: sort data before return in full sync stage.

2020-08-14 Alibaba Cloud.
	* version: 2.4.10
	* IMPROVE: modify the logic of transaction merging in change stream mode
	to improve synchronization performance. #370
	* BUGFIX: fix bug of "panic with session already closed" in StartIndexSync
	function.
	* BUGFIX: remove autoIndexId when autoIndexId and idIndex co-exists in
	create collection oplog. #400
	* IMPROVE: when meets DDL in sharding, do not crash when fetch_method is
	change_stream.
	* IMPROVE: when fetch_method is change_stream, do not set worker thread
	to MongoD number when source side is sharding. 

2020-08-06 Alibaba Cloud.
	* version: 2.4.9
	* BUGFIX: checkpoint doesn't work after restart. #403
	* IMPROVE: mandatory set read concern to majority for change stream. #406
	* BUGFIX: filter checkpoint.storage.db, not only mongoshake.

2020-07-29 Alibaba Cloud.
	* version: 2.4.8
	* BUGFIX: fix bug that checkpoint.storage.db does not work since v2.4.6.
	* BUGFIX: fix bug of orphan document filter core. #389.
	* IMPROVE: remove listDatabase request when incr_sync.shard_key != auto.
	#385.