@@ -6,6 +6,7 @@ import (
 	"encoding/json"
 
 	"github.com/vinllen/mgo/bson"
+	"strings"
 )
 
 const (
@@ -19,15 +20,17 @@ type GenericOplog struct {
 
 type ParsedLog struct {
 	Timestamp     bson.MongoTimestamp `bson:"ts" json:"ts"`
+	HistoryId     int64               `bson:"h,omitempty" json:"h,omitempty"`
+	Version       int                 `bson:"v,omitempty" json:"v,omitempty"`
 	Operation     string              `bson:"op" json:"op"`
-	Gid           string              `bson:"g" json:"g"`
+	Gid           string              `bson:"g,omitempty" json:"g,omitempty"`
 	Namespace     string              `bson:"ns" json:"ns"`
 	Object        bson.D              `bson:"o" json:"o"`
 	Query         bson.M              `bson:"o2" json:"o2"`
-	UniqueIndexes bson.M              `bson:"uk" json:"uk"`
-	Lsid          interface{}         `bson:"lsid" json:"lsid"`               // mark the session id, used in transaction
-	FromMigrate   bool                `bson:"fromMigrate" json:"fromMigrate"` // move chunk
-	TxnNumber     uint64              `bson:"txnNumber" json:"txnNumber"`     // transaction number in session
+	UniqueIndexes bson.M              `bson:"uk,omitempty" json:"uk,omitempty"`
+	Lsid          bson.M              `bson:"lsid,omitempty" json:"lsid,omitempty"`               // mark the session id, used in transaction
+	FromMigrate   bool                `bson:"fromMigrate,omitempty" json:"fromMigrate,omitempty"` // move chunk
+	TxnNumber     uint64              `bson:"txnNumber,omitempty" json:"txnNumber,omitempty"`     // transaction number in session
 }
 
 type PartialLog struct {
@@ -65,7 +68,8 @@ func NewPartialLog(data bson.M) *PartialLog {
 	parsedLog := new(ParsedLog)
 	logType := reflect.TypeOf(*parsedLog)
 	for i := 0; i < logType.NumField(); i++ {
-		tagName := logType.Field(i).Tag.Get("bson")
+		tagNameWithOption := logType.Field(i).Tag.Get("bson")
+		tagName := strings.Split(tagNameWithOption, ",")[0]
 		if v, ok := data[tagName]; ok {
 			reflect.ValueOf(parsedLog).Elem().Field(i).Set(reflect.ValueOf(v))
 		}
@@ -88,9 +92,10 @@ func (partialLog *PartialLog) Dump(keys map[string]struct{}, all bool) bson.D {
 	var out bson.D
 	logType := reflect.TypeOf(partialLog.ParsedLog)
 	for i := 0; i < logType.NumField(); i++ {
-		if tagName, ok := logType.Field(i).Tag.Lookup("bson"); ok {
+		if tagNameWithOption, ok := logType.Field(i).Tag.Lookup("bson"); ok {
 			// out[tagName] = reflect.ValueOf(partialLog).Elem().Field(i).Interface()
 			value := reflect.ValueOf(partialLog.ParsedLog).Field(i).Interface()
+			tagName := strings.Split(tagNameWithOption, ",")[0]
 			if !all {
 				if _, ok := keys[tagName]; !ok {
 					continue
